--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>>Cuarto Software</h1>
     <h2>Manejo y Configuracion de Software</h2>
+  <h3>Michelle Tunja</h3>
 </body>
 </html>
