Se creo los objetivos

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>>Cuarto Software</h1>
     <h2>Manejo y Configuracion de Software</h2>
   <h3>Michelle Tunja</h3>
+
+  <h3>OBJETIVOS</h3>
+  <p>Aqui va la lista de objetivos</p>
 </body>
 </html>
