--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h2>Manejo y Configuracion de Software</h2>
   <h3>Michelle Tunja</h3>
 </body>
-<footer>
-  UTA 2024
-</footer>
+<footer class="container">
+  <p class="float-end"><a href="#">Back to top</a></p>
+  <p>&copy; 2017–2024  UTA Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
 </html>
